--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 					    dentro de uma ul, sempre posicionados na lista-fazer inicialmente
 				     -->
 					<li class="drag-item fazer" data-item="link1" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link">
+						<p><a href="conteudo/" target="_blank" class="link">Histórico e evolução das lentes de contato:
+								origem e principais fatos
 							</a></p>
 						<div class="dropdown dropdown-bubble">
 							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -133,7 +134,11 @@
 				<h3 class="visible-lg visible-md">A FAZER</h3>
 				<ul class="drag-inner-list" id="4" data-index="lista-fazer">
 					<li class="drag-item fazer" data-item="link2" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link"> </a></p>
+						<p><a href="conteudo/02_composicao_e_funcao_dos_produtos.html" target="_blank"
+								class="link">Composição e função dos produtos, das
+								matérias-primas, recursos físicos e anatômicos oferecidos pelos diversos tipos de lentes
+								de contato; materiais das lentes de contato hidrofílicas e de contato rígidas; desenho
+								das lentes de contato hidrofílicas e rígidas </a></p>
 						<div class="dropdown dropdown-bubble">
 							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="caret"></span>
@@ -149,7 +154,9 @@
 					<!--inserir os outros links a partir daqui-->
 
 					<li class="drag-item fazer" data-item="link3" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link"></a></p>
+						<p><a href="conteudo/03_processo_de_fabricacao_das_lentes.html" target="_blank"
+								class="link">Processo de fabricação das lentes de contato
+								rígidas e hidrofílicas </a></p>
 						<div class="dropdown dropdown-bubble">
 							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="caret"></span>
@@ -193,7 +200,11 @@
 				<ul class="drag-inner-list" id="7" data-index="lista-fazer">
 					<!--exemplo na semana 3-->
 					<li class="drag-item fazer" data-item="link4" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link"></a></p>
+						<p><a href="conteudo/04_adaptacao_de_lentes_de_contato.html" target="_blank"
+								class="link">Adaptação de lentes de contato hidrofílicas
+								esféricas, asféricas e tóricas, rígidas esféricas, asféricas e tóricas; avaliação dos
+								resultados das lentes de contato de teste monofocais; registro dos resultados na ficha
+								de anamnese </a></p>
 						<div class="dropdown dropdown-bubble">
 							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="caret"></span>
@@ -243,7 +254,27 @@
 				<ul class="drag-inner-list" id="10" data-index="lista-fazer">
 					<!-- exemplo semana 04-->
 					<li class="drag-item fazer" data-item="link5" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link"></a></p>
+						<p><a href="conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html" target="_blank"
+								class="link">Técnicas de adaptação de lentes de contato
+								em pacientes presbitas, com ceratocone, em pacientes pós-cirúrgicos; sobrerrefração:
+								definição; técnicas e equipamentos utilizados </a></p>
+						<div class="dropdown dropdown-bubble">
+							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dLabel">
+								Mover para:
+								<li class="mover-fazer">A fazer</li>
+								<li class="mover-fazendo">Sendo feito</li>
+								<li class="mover-feito">Feito</li>
+							</ul>
+						</div>
+					</li>
+
+					<li class="drag-item fazer" data-item="link5" data-toggle="tooltip" data-placement="top">
+						<p><a href="conteudo/" target="_blank" class="link">Descarte de resíduos do processo de
+								adaptação de lentes de contato: tipos de resíduos gerados; impactos ambientais causados
+								por descarte incorreto de resíduos; sustentabilidade </a></p>
 						<div class="dropdown dropdown-bubble">
 							<a id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="caret"></span>
@@ -276,7 +307,7 @@
 
 		<div class="row">
 			<div class="col-lg-2 pull-left text-right margin50" style="padding-left: 0;">
-				<a href="conteudo/referencias.html" target="_blank" class="referencias ui-link" title="Referências"
+				<a href="conteudo/07_referencias.html" target="_blank" class="referencias ui-link" title="Referências"
 					role="button"><img src="assets/btn_referencias.png" alt="Referencias"></a>
 			</div>
 			<div class="col-lg-2 pull-right text-right margin50">
