--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
 					</li>
 
 					<li class="drag-item fazer" data-item="link5" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link">Descarte de resíduos do processo de
+						<p><a href="conteudo/06_descarte_de_residuos.html" target="_blank" class="link">Descarte de
+								resíduos do processo de
 								adaptação de lentes de contato: tipos de resíduos gerados; impactos ambientais causados
 								por descarte incorreto de resíduos; sustentabilidade </a></p>
 						<div class="dropdown dropdown-bubble">
