--- a/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
@@ -343,27 +343,27 @@
                 </div>
               </div>
             </div>
-            <div class="modal fade" id="bgmodal-acerto" tabindex="-1" aria-labelledby="bgmodal-passou"
-              aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
+            <div class="modal fade" id="bgmodal-acerto" tabindex="-1" role="dialog" aria-labelledby="bgmodal-passou"
+              aria-hidden="true" aria-live="polite" aria-atomic="true">
+              <div class="modal-dialog modal-dialog-centered" role="dialog">
                 <div class="modal-content no-print">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-check    "></i> Parabéns, resposta
-                      correta! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Certo.
+                        <p>Parabéns, resposta
+                          correta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
@@ -371,29 +371,29 @@
             <div class="modal fade" id="bgmodal-erro" tabindex="-1" aria-labelledby="bgmodal-passou" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content no-print">
-                  <div class="modal-header bg-danger">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-times    "></i> Atenção! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <div class="modal-header">
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Errado.
+                        <p>Resposta
+                          incorreta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
 
         <div class="parallax" id="parallax-2"></div>
 
@@ -931,7 +931,7 @@
                       </div>
                     </div>
                   </div>
-                  <div id="cardPile" class="game-itens-container">
+                  <div id="cardPilej2" class="game-itens-container">
                     <div id="card-5" class="card" data-target="slot-5">
                       Essas lentes especiais têm duas curvaturas na parte posterior, uma para se adaptar ao formato
                       cônico da córnea e outra para estabilizar a lente. São indicadas para ceratocone incipiente e
@@ -962,27 +962,27 @@
                 </div>
               </div>
             </div>
-            <div class="modal fade" id="bgmodal-acerto1" tabindex="-1" aria-labelledby="bgmodal-passou"
-              aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
+            <div class="modal fade" id="bgmodal-acerto1" tabindex="-1" role="dialog" aria-labelledby="bgmodal-passou"
+              aria-hidden="true" aria-live="polite" aria-atomic="true">
+              <div class="modal-dialog modal-dialog-centered" role="dialog">
                 <div class="modal-content no-print">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-check    "></i> Parabéns, resposta
-                      correta! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Certo.
+                        <p>Parabéns, resposta
+                          correta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
@@ -991,22 +991,23 @@
               aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content no-print">
-                  <div class="modal-header bg-danger">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-times    "></i> Atenção! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <div class="modal-header">
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Errado.
+                        <p>Resposta
+                          incorreta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
@@ -1205,7 +1206,7 @@
                       </div>
                     </div>
                   </div>
-                  <div id="cardPile" class="game-itens-container">
+                  <div id="cardPilej3" class="game-itens-container">
                     <div id="card-10" class="card" data-target="slot-10">
                       Após cirurgias refrativas para correção de miopia e astigmatismo, que podem resultar em
                       irregularidades na córnea, são utilizados modelos específicos de lentes de contato rígidas
@@ -1224,27 +1225,27 @@
                 </div>
               </div>
             </div>
-            <div class="modal fade" id="bgmodal-acerto2" tabindex="-1" aria-labelledby="bgmodal-passou"
-              aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
+            <div class="modal fade" id="bgmodal-acerto2" tabindex="-1" role="dialog" aria-labelledby="bgmodal-passou"
+              aria-hidden="true" aria-live="polite" aria-atomic="true">
+              <div class="modal-dialog modal-dialog-centered" role="dialog">
                 <div class="modal-content no-print">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-check    "></i> Parabéns, resposta
-                      correta! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Certo.
+                        <p>Parabéns, resposta
+                          correta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
@@ -1253,22 +1254,23 @@
               aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content no-print">
-                  <div class="modal-header bg-danger">
-                    <h5 class="modal-title" id="bgmodal-passou"><i class="fas fa-times    "></i> Atenção! </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <div class="modal-header">
+                    <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                      aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-12 col-lg-4">
                       </div>
                       <div class="col-12 col-lg-8">
-                        <p>Errado.
+                        <p>Resposta
+                          incorreta!
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                   </div>
                 </div>
               </div>
