--- a/conteudo/07_referencias.html
+++ b/conteudo/07_referencias.html
@@ -72,8 +72,8 @@
       <div class="pagina">
         <h2>Referências</h2>
         <h3>Histórico e evolução das lentes de contato: origem e principais fatos </h3>
-        </p>ADOLF Fick. <b>EcuRed</b>, [s. d.]. Disponível em: https://www.ecured.cu/Adolf_Fick. Acesso em: 28 mar.
-        2024.</p>
+        <p>ADOLF Fick. <b>EcuRed</b>, [s. d.]. Disponível em: https://www.ecured.cu/Adolf_Fick. Acesso em: 28 mar.
+          2024.</p>
         <p>BELÉNDEZ, Augusto. Thomas Young y la naturaleza ondulatoria de la luz. <b>OpenMind BBVA</b>, 13 jun. 2015.
           Disponível
           em:
