--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 					    dentro de uma ul, sempre posicionados na lista-fazer inicialmente
 				     -->
 					<li class="drag-item fazer" data-item="link1" data-toggle="tooltip" data-placement="top">
-						<p><a href="conteudo/" target="_blank" class="link">Histórico e evolução das lentes de contato:
+						<p><a href="conteudo/01_historico_e_evolucao_das_lentes.html" target="_blank"
+								class="link">Histórico e evolução das lentes de contato:
 								origem e principais fatos
 							</a></p>
 						<div class="dropdown dropdown-bubble">
