--- a/conteudo/03_processo_de_fabricacao_das_lentes.html
+++ b/conteudo/03_processo_de_fabricacao_das_lentes.html
@@ -483,7 +483,7 @@
   <script src="js/images.loader.js"></script>
   <script src="js/01.js"></script>
   <script src="js/aos.js"></script>
-  <script>AOS.init()</script>
+ 
   <noscript>
     <style media="screen">
       .over-loader {
@@ -492,87 +492,52 @@
     </style>
   </noscript>
 
-  <!--arquivo js necessario para o funcionamento do visualizador 3d-->
-  <script type="module" src="objetos/olho3d/viewer_3d/js/model-viewer.min.js"></script>
 
-  <!-- arquivo js responsavel pela funcionalidade de panning no modelo 3d-->
-  <script src="objetos/olho3d/viewer_3d/js/pan.js"></script>
 
   <script>
-    AddPan('#objeto01');
+    $('.divisoria').parallax();
+
+    //inicializa popover
+    $(function () {
+      $('[data-toggle="popover"]').popover()
+    })
+    //inicializa tooltip
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+
+    window.addEventListener('load', function () {
+      AOS.init()
+    })
+  </script>
+  <!-- Versao atual do handtalk -->
+  <script>
+    var scriptElem = document.createElement("script");
+    scriptElem.src = "https://plugin.handtalk.me/web/latest/handtalk.min.js",
+      scriptElem.charset = "UTF-8",
+      scriptElem.onload = function () {
+        window.ht = new HT({
+          token: "bf5b7efb148a829a126a0e0c9fd533bf",
+          align: "top",
+          videoEnabled: true,
+          ytEmbedReplace: true,
+          mobileConfig: {
+            align: "right",
+            actionsAlign: "top",
+            customButtonStyle: {
+              borderRadius: "6px",
+              size: "38px",
+              horizontalMargin: "13px",
+              bottomMargin: "140px",
+              rightMargin: "40px"
+            }
+          }
+        });
+        $('.ht-skip').attr("aria-hidden", "true")
+      },
+      document.body.appendChild(scriptElem);
 
   </script>
 </body>
 
 </html>
-<script>
-  //inicializa zoom na imagem
-  $('.zoom-imagem').magnificPopup({
-    type: 'image',
-    mainClass: 'mfp-with-zoom', // this class is for CSS animation below
-    zoom: {
-      enabled: true, // By default it's false, so don't forget to enable it
-
-      duration: 300, // duration of the effect, in milliseconds
-      easing: 'ease-in-out', // CSS transition easing function
-
-      // The "opener" function should return the element from which popup will be zoomed in
-      // and to which popup will be scaled down
-      // By defailt it looks for an image tag:
-      opener: function (openerElement) {
-        // openerElement is the element on which popup was initialized, in this case its <a> tag
-        // you don't need to add "opener" option if this code matches your needs, it's defailt one.
-        return openerElement.is('img') ? openerElement : openerElement.find('img');
-      }
-    },
-    image: {
-      markup: '<div class="mfp-figure">' +
-        '<div class="mfp-close"></div>' +
-        '<div class="mfp-img"></div>' + // Floated left
-        '<div class="mfp-bottom-bar">' + '<figcaption>' + '<div class="mfp-title" style="text-align:center"></div>' +
-        '<div class="mfp-counter"></div>' + '</figcaption>' +
-        '</div>' +
-        '</div>', // Popup HTML markup. `.mfp-img` div will be replaced with img tag, `.mfp-close` by close button
-
-      cursor: 'mfp-zoom-out-cur', // Class that adds zoom cursor, will be added to body. Set to null to disable zoom out cursor.
-
-      tError: '<a href="%url%">A imagem</a> não pode ser carregada.' // Error message
-    }
-  });
-
-  //inicializa popover
-  $(function () {
-    $('[data-toggle="popover"]').popover()
-  })
-  //inicializa tooltip
-  $(function () {
-    $('[data-toggle="tooltip"]').tooltip()
-  })
-
-</script>
-<script>
-  var scriptElem = document.createElement("script");
-  scriptElem.src = "https://plugin.handtalk.me/web/latest/handtalk.min.js",
-    scriptElem.charset = "UTF-8",
-    scriptElem.onload = function () {
-      window.ht = new HT({
-        token: "bf5b7efb148a829a126a0e0c9fd533bf",
-        videoEnabled: true,
-        ytEmbedReplace: true,
-        align: "top",
-        mobileConfig: {
-          align: "right",
-          actionsAlign: "top",
-          customButtonStyle: {
-            borderRadius: "6px",
-            size: "38px",
-            horizontalMargin: "13px",
-            bottomMargin: "140px",
-            rightMargin: "40px"
-          }
-        }
-      })
-    },
-    document.body.appendChild(scriptElem);
-</script>
-<script src="https://plugin.handtalk.me/web/latest/handtalk.min.js" charset="UTF-8"></script>
