--- a/conteudo/04_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/04_adaptacao_de_lentes_de_contato.html
@@ -1322,11 +1322,11 @@
             características corneanas. Conheça-os: </p>
           <div class="no-print" aria-hidden="true">
             <p>Clique ou toque para visualizar o conteúdo.</p>
-            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingFive">
                   <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
+                    <a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseFive"
                       aria-expanded="true" aria-controls="collapseFive">
                       Lentes RGP esféricas
                     </a>
@@ -1343,7 +1343,7 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingFour">
                   <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1"
                       href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       Lentes RGP asféricas
                     </a>
@@ -1504,7 +1504,7 @@
   <script src="js/images.loader.js"></script>
   <script src="js/01.js"></script>
   <script src="js/aos.js"></script>
-  
+
   <noscript>
     <style media="screen">
       .over-loader {
@@ -1513,7 +1513,7 @@
     </style>
   </noscript>
 
-
+  <script>window.addEventListener('load', function () { $('.menu-toggle').click() })</script>
 
   <script>
     $('.divisoria').parallax();
