--- a/conteudo/01_historico_e_evolucao_das_lentes.html
+++ b/conteudo/01_historico_e_evolucao_das_lentes.html
@@ -257,7 +257,224 @@
                 contato.
               </p>
             </div>
-
+            <h2 class="no-print">Histórico e evolução das lentes de contato: origem e principais fatos</h2>
+            <ul class="timeline no-print">
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description1', this)">
+                    <img src="../conteudo/images/01/01.png" alt="Image 1">
+                  </button>
+                  <div id="description1" class="description">
+                    <p>As lentes de contato têm uma história fantástica que iniciou há mais de 500 anos com o conhecido
+                      pintor,
+                      inventor, escultor e engenheiro <b>Leonardo da Vinci</b>, que, em <b>1508</b>, acreditou ser capaz
+                      de
+                      colocar os olhos
+                      diretamente em contato com um material para corrigir a visão. Assim, Da Vinci imaginou a
+                      construção de
+                      uma
+                      lente que, posta na superfície do globo ocular, poderia corrigir os problemas de visão.</p>
+                    <p>Ele demonstrou que enxergar através do fundo de uma tigela de vidro cheia de água poderia ajudar
+                      a
+                      corrigir
+                      o problema. Embora imergir o rosto em uma tigela de água seja uma forma claramente impraticável de
+                      fazer
+                      as
+                      coisas, seu método reconheceu a necessidade de as lentes entrarem em contato com os olhos.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description2', this)">
+                    <img src="../conteudo/images/01/02.png" alt="Image 2">
+                  </button>
+                  <div id="description2" class="description">
+                    <p>Mais de 100 anos depois, em <b>1632</b>, o filósofo, físico e matemático francês <b>René
+                        Descartes</b>
+                      foi autor de uma
+                      ideia parecida, desenvolvendo esse conceito discutindo os efeitos do uso de um tubo de ensaio
+                      cheio de
+                      água para obter um resultado semelhante ao de Da Vinci – de colocar uma lente na córnea. Contudo,
+                      de
+                      acordo com seu projeto, a lente ficaria muito grande, o que não era prático, pois o usuário
+                      ficaria
+                      impossibilitado de piscar. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description3', this)">
+                    <img src="../conteudo/images/01/03.png" alt="Image 1">
+                  </button>
+                  <div id="description3" class="description">
+                    <p>A história continuou em <b>1801</b> quando o físico, médico e egiptólogo britânico <b>Thomas
+                        Young</b>
+                      melhorou o
+                      projeto de Descartes, criando um “lava-olhos” adaptado, o qual consistia em um tubo cheio de água
+                      com
+                      uma
+                      lente pequenina na extremidade. Tentando aperfeiçoar a ideia para corrigir a própria ametropia,
+                      utilizou
+                      uma lente de um microscópio botânico com as bordas protegidas por cera. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description4', this)">
+                    <img src="../conteudo/images/01/04.png" alt="Image 2">
+                  </button>
+                  <div id="description4" class="description">
+                    <p>Em <b>1827</b>, o cientista britânico <b>John Herschel</b> introduziu a ideia de que a criação de
+                      um
+                      molde da córnea
+                      ajudaria a produzir lentes que pudessem corrigir a visão. Herschel corretamente considerou o
+                      astigmatismo
+                      devido à irregularidade da córnea e teorizou que a visão poderia ser melhorada pela aplicação de
+                      alguma
+                      geleia animal contida em uma cápsula de vidro contra a superfície corneana. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description5', this)">
+                    <img src="../conteudo/images/01/05.png" alt="Image 1">
+                  </button>
+                  <div id="description5" class="description">
+                    <p>No entanto, apesar dos importantes precursores, infelizmente a tecnologia da época não
+                      possibilitou a
+                      prática de suas teorias. As lentes de contato só foram possivelmente desenvolvidas na década de
+                      <b>1880</b>,
+                      quando a tecnologia de produção de vidro tornou as lentes mais finas e, pela primeira vez, o
+                      médico
+                      alemão
+                      <b>Adolf Fick</b> fabricou uma lente de contato bem-sucedida. Mesmo assim, as lentes ainda eram
+                      grossas
+                      e
+                      pesadas
+                      e cobriam totalmente os olhos.
+                    </p>
+                    <p>Como eram feitas inteiramente de vidro, as lentes não permitiam que oxigênio suficiente chegasse
+                      aos
+                      olhos, gerando intenso desconforto após algumas horas de uso. Assim, os protótipos iniciais não
+                      tiveram
+                      muito sucesso. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description6', this)">
+                    <img src="../conteudo/images/01/06.png" alt="Image 2">
+                  </button>
+                  <div id="description6" class="description">
+                    <p>No ano de <b>1929</b>, o optometrista nova-iorquino <b>William Feinbloom</b> desenvolveu uma nova
+                      lente
+                      por meio de um
+                      material criado da mistura de vidro e plástico.</p>
+                    <p>A entrada de Feinbloom no campo das lentes de contato ocorreu em <b>1936</b>, quando ele começou
+                      a
+                      trabalhar no
+                      que
+                      viria a ser a primeira lente escleral. Assim, obteve a patente para esse dispositivo dois anos
+                      depois.
+                    </p>
+                    <p>Uma patente adicional foi concedida em <b>1940</b>, a qual descrevia uma lente de contato
+                      “híbrida”
+                      formada por
+                      uma
+                      óptica de vidro central e uma alça escleral de plástico. Apesar do avanço no tipo de material
+                      empregado,
+                      essas lentes ainda eram bastante rígidas e tinham uma dimensão que causava bastante incômodo aos
+                      usuários.
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description7', this)">
+                    <img src="../conteudo/images/01/07.png" alt="Image 1">
+                  </button>
+                  <div id="description7" class="description">
+                    <p>Uma das lentes mais conhecidas dessa época foi criada pelo óptico da Califórnia <b>Kevin
+                        Tuohy</b>, em
+                      <b>1948</b>, que
+                      descobriu que as lentes ainda funcionavam mesmo cobrindo uma área muito menor da superfície
+                      ocular. Mais
+                      algumas melhorias logo seguiram, tornando as lentes duras mais finas, moldadas nos olhos e mais
+                      confortáveis, feitas inteiramente de PMMA (polimetacrilato de metilo).
+                    </p>
+                    <p>Embora houvesse muitas histórias ao longo dos anos sobre a origem da lente, uma delas conta que
+                      uma
+                      lente
+                      escleral acidentalmente foi quebrada pela esposa de Tuohy, resultando em um pedaço de tamanho
+                      menor, e
+                      que
+                      o
+                      óptico então experimentou a lente danificada para ver o que aconteceria.</p>
+                    <p>Depois de mais experiências, ele registrou sua patente e publicou um manual de adaptação para as
+                      novas
+                      lentes menores.</p>
+                    <p>A principal vantagem oferecida por essa combinação revolucionária de plástico leve e um
+                      <i>design</i>
+                      corneano
+                      foi
+                      o potencial para aumento da troca lacrimal (entre a lente e a córnea), mas o conforto do paciente
+                      ainda
+                      era
+                      um fator limitante. Mesmo assim, a inovação de Tuohy obteve grande sucesso e serviu de base para
+                      mudanças
+                      contínuas no <i>design</i> das lentes de PMMA que dominavam o mercado antes da introdução das
+                      lentes de
+                      contato
+                      gelatinosas.
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description8', this)">
+                    <img src="../conteudo/images/01/08.png" alt="Image 2">
+                  </button>
+                  <div id="description8" class="description">
+                    <p>Na próxima década, a mais importante mudança foi feita por <b>George Butterfield</b>, um
+                      optometrista
+                      do
+                      Oregon
+                      que adicionou curvas periféricas à superfície posterior das lentes, em <b>1950</b>, introduzindo o
+                      conceito
+                      moderno de adaptação com base nas leituras da ceratometria. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-item">
+                <div class="timeline-content">
+                  <button type="button" class="btn" onclick="toggleDescription('description9', this)">
+                    <img src="../conteudo/images/01/09.png" alt="Image 1">
+                  </button>
+                  <div id="description9" class="description">
+                    <p>Nas duas décadas seguintes, o material de hidrogel (gelatinoso) foi desenvolvido e, em
+                      <b>1971</b>, as
+                      primeiras
+                      lentes de contato gelatinosas ganharam a aprovação do FDA, chegando ao mercado quando a empresa
+                      <b>Bausch
+                        +
+                        Lomb</b>, fundada por <b>John Jacob Bausch</b> e <b>Henry Lomb</b>, concebeu lentes mais
+                      seguras,
+                      confortáveis e maleáveis
+                      para a correção de miopia e hipermetropia. No final dos <b>anos 70</b>, as lentes tóricas também
+                      foram
+                      desenvolvidas, oferecendo uma solução para o astigmatismo.
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -331,7 +548,7 @@
   <script src="js/parallax.js"></script>
 
   <script src="js/01.js"></script>
-  
+
   <noscript>
     <style media="screen">
       .over-loader {
@@ -340,7 +557,17 @@
     </style>
   </noscript>
 
+  <script>
+    function toggleDescription(id, btn) {
+      var descriptions = document.querySelectorAll('.description');
+      descriptions.forEach(function (description) {
+        description.classList.remove('active');
+      });
 
+      var description = document.getElementById(id);
+      description.classList.add('active');
+    }
+  </script>
 
   <script>
     $('.divisoria').parallax();
