--- a/conteudo/06_descarte_de_residuos.html
+++ b/conteudo/06_descarte_de_residuos.html
@@ -24,6 +24,7 @@
   <link href="css/aos.css" type="text/css" rel="stylesheet">
   <link href="css/06.css" type="text/css" rel="stylesheet">
   <link href="css/print.css" type="text/css" rel="stylesheet">
+  <link href="css/custom-accordion.css" type="text/css" rel="stylesheet">
   <!-- relacionar colunas -->
   <link rel="stylesheet" href="js/dragula.css">
   <link rel="stylesheet" href="css/game-custom.css">
@@ -116,7 +117,7 @@
                     local onde o profissional técnico em óptica especialista atenderá o futuro usuário de LC e realizará
                     os
                     devidos exames preliminares para a adaptação.</p>
-                  <div class="caixa-destaque">
+                  <div class="caixa-destaque olho">
                     <p> Veja os itens necessários para a estrutura do setor:</p>
                     <ul>
                       <li>Paredes, móveis e decoração em tom de cores claras</li>
@@ -340,12 +341,13 @@
                   <p>Conheça, a seguir, as classificações dos riscos associados à biossegurança.</p>
                   <div class="no-print" aria-hidden="true">
                     <p>Clique ou toque para visualizar o conteúdo.</p>
-                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                    <div class="panel-group gaitinha" id="accordion" role="tablist" aria-multiselectable="true">
                       <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
                           <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                               aria-expanded="true" aria-controls="collapseOne">
+                              <img src="../conteudo/images/06/ico01.png" style="padding-right: 5px;">
                               Riscos de acidentes
                             </a>
                           </h4>
@@ -369,6 +371,7 @@
                           <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                               href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              <img src="../conteudo/images/06/ico02.png" style="padding-right: 5px;">
                               Riscos ergonômicos
                             </a>
                           </h4>
@@ -399,6 +402,7 @@
                           <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                               href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <img src="../conteudo/images/06/ico03.png" style="padding-right: 5px;">
                               Riscos físicos
                             </a>
                           </h4>
@@ -423,6 +427,7 @@
                           <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour"
                               aria-expanded="true" aria-controls="collapseFour">
+                              <img src="../conteudo/images/06/ico07.png" style="padding-right: 5px;">
                               Riscos químicos
                             </a>
                           </h4>
@@ -446,6 +451,7 @@
                           <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive"
                               aria-expanded="true" aria-controls="collapseFive">
+                              <img src="../conteudo/images/06/ico08.png" style="padding-right: 5px;">
                               Riscos biológicos
                             </a>
                           </h4>
@@ -468,8 +474,134 @@
                       </div>
                     </div>
                   </div>
-                  <p>Design/Diagramação: Inserir jogo relacionar colunas com selo da presencialidade com os conteúdos de
-                    riscos biológicos. </p>
+                  <img src="../conteudo/images/selo-presencialidade.png"
+                    class="center-block img-responsive no-print borda" alt="" style="width: 100px;">
+                  <div id="content-game">
+                    <div class="container-fluid game-body no-print" style="padding:0;">
+                      <div class="row">
+                        <div class="col-10 align-self-start d-block m-auto">
+                          <div class="row game-descricao-img"><img src="./images/05/pg2-praticar2-ico.png"
+                              style="width: 150px;" alt=""></div>
+                          <div class="row game-descricao">
+                            <p>Classificação dos riscos associados à biossegurança</p>
+                          </div>
+                        </div>
+                        <div id="slots" class="col-12 mt-5 mb-5">
+                          <div class="row">
+                            <div class="col-12 col-md-4 mt-3 mb-3">
+                              <div class="game-titulo">
+                                <p>Riscos de acidentes</p>
+                              </div>
+                              <div id="slot-1" class="slot">
+                              </div>
+                            </div>
+                            <div class="col-12 col-md-4 mt-3 mb-3">
+                              <div class="game-titulo">
+                                <p>Riscos ergonômicos</p>
+                              </div>
+                              <div id="slot-2" class="slot">
+                              </div>
+                            </div>
+                            <div class="col-12 col-md-4 mt-3 mb-3">
+                              <div class="game-titulo">
+                                <p>Riscos físicos</p>
+                              </div>
+                              <div id="slot-3" class="slot">
+                              </div>
+                            </div>
+                            <div class="col-12 col-md-4 mt-3 mb-3">
+                              <div class="game-titulo">
+                                <p>Riscos químicos</p>
+                              </div>
+                              <div id="slot-4" class="slot">
+                              </div>
+                            </div>
+                            <div class="col-12 col-md-4 mt-3 mb-3">
+                              <div class="game-titulo">
+                                <p>Riscos biológicos</p>
+                              </div>
+                              <div id="slot-5" class="slot">
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div id="cardPile" class="game-itens-container">
+                          <div id="card-1" class="card" data-target="slot-1">
+                            Relacionados a situações de perigo que possam afetar a integridade, o bem-estar físico e
+                            moral dos indivíduos nos laboratórios.
+                          </div>
+                          <div id="card-2" class="card" data-target="slot-2">
+                            Relacionados com qualquer ocorrência que venha a interferir nas características
+                            psicofisiológicas do indivíduo, podendo gerar desconforto ou afetando sua saúde. Como por
+                            exemplo o caso das lesões causadas pelo esforço repetitivo (LER).
+                          </div>
+                          <div id="card-3" class="card" data-target="slot-3">
+                            São os ruídos, vibrações, temperaturas extremas, radiações ionizantes e não ionizantes,
+                            ultrassom, materiais cortantes e pontiagudos. Correspondentes às diversas formas de energia
+                            que os indivíduos estão expostos
+                          </div>
+                          <div id="card-4" class="card" data-target="slot-4">
+                            Associados a todas as substâncias, compostos ou produtos nas formas de gases, vapores,
+                            poeiras, fumaças, fumos, névoas ou neblinas, que possam penetrar no organismo pela via
+                            respiratória ou pelo contato por meio da pele ou ingestão.
+                          </div>
+                          <div id="card-5" class="card" data-target="slot-4">
+                            Abrangem a manipulação dos agentes e materiais biológicos.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal fade" id="bgmodal-acerto" tabindex="-1" role="dialog"
+                    aria-labelledby="bgmodal-passou" aria-hidden="true" aria-live="polite" aria-atomic="true">
+                    <div class="modal-dialog modal-dialog-centered" role="dialog">
+                      <div class="modal-content no-print">
+                        <div class="modal-header">
+                          <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                            aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="row">
+                            <div class="col-12 col-lg-4">
+                            </div>
+                            <div class="col-12 col-lg-8">
+                              <p>Parabéns, resposta
+                                correta!
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal fade" id="bgmodal-erro" tabindex="-1" aria-labelledby="bgmodal-passou"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content no-print">
+                        <div class="modal-header">
+                          <button type="button" id="bgmodal-passou" class="close" data-dismiss="modal"
+                            aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="row">
+                            <div class="col-12 col-lg-4">
+                            </div>
+                            <div class="col-12 col-lg-8">
+                              <p>Resposta
+                                incorreta!
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <h4>Medidas de controle de contaminação no local de trabalho </h4>
                   <p>Em laboratório, as boas práticas de controle de contaminação são fundamentais e referem-se às
                     normas de
@@ -787,7 +919,7 @@
             LC,
             local onde o profissional técnico em óptica especialista atenderá o futuro usuário de LC e realizará os
             devidos exames preliminares para a adaptação.</p>
-          <div class="caixa-destaque">
+          <div class="caixa-destaque olho">
             <p> Veja os itens necessários para a estrutura do setor:</p>
             <ul>
               <li>Paredes, móveis e decoração em tom de cores claras</li>
@@ -1008,7 +1140,7 @@
               <li>Lavar frequentemente as mãos com água e sabão, por meio de técnica adequada</li>
             </ul>
           </div>
-          <p>Acompanhe o passo a passo da técnica adequada da lavagem de mãos: </p>
+       
           <figure>
             <img src="../conteudo/images/06/img07.png" class="center-block img-responsive print borda"
               alt="Figura mostra seis desenhos ensinando cada passo da lavagem de mãos. Da esquerda para a direita, o primeiro mostra as duas mãos abertas com espuma de sabão, o segundo mostra a mão direita esfregando a palma esquerda, o terceiro mostra a mão direita esfregando entre os dedos da mão esquerda, o quarto mostra a mão esquerda esfregando o polegar direito, o quinto mostra a mão direita esfregando o dorso da mão esquerda e o sexto mostra a mão esquerda lavando o punho direito.">
@@ -1016,7 +1148,16 @@
               Fonte: Soares (2020)
             </figcaption>
           </figure>
-
+          <br>
+          <p>Acompanhe o passo a passo da técnica adequada da lavagem de mãos: </p>
+          <figure>
+            <img src="../conteudo/images/06/img08.png" class="center-block img-responsive print borda"
+              alt="Figura mostra seis desenhos ensinando cada passo da lavagem de mãos. Da esquerda para a direita, o primeiro mostra as duas mãos abertas com espuma de sabão, o segundo mostra a mão direita esfregando a palma esquerda, o terceiro mostra a mão direita esfregando entre os dedos da mão esquerda, o quarto mostra a mão esquerda esfregando o polegar direito, o quinto mostra a mão direita esfregando o dorso da mão esquerda e o sexto mostra a mão esquerda lavando o punho direito.">
+            <figcaption>Técnica adequada da lavagem de mãos<br>
+              Fonte: Soares (2020)
+            </figcaption>
+          </figure>
+          <br>
           <div class="caixa-destaque">
             <p><b>Observação importante:</b> não é recomendado utilizar álcool em gel nas mãos ao adaptar LC, já que o
               produto
